fix(html): add missing </head> tag

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <!-- Scripts -->
     <script src="https://toolboxhub.ct.ws/cdn/scripts/common-scripts.js?v=29300846" defer></script>
     <script src="scripts/main.js" defer></script>
+</head>
 
 <body>
     <div class="page-wrapper">
